flaskapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
        - name: flask-api
          image: naveen1314/flask-api:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /var/log/flask-api
              name: flask-api-logs
      volumes:
        - name: flask-api-logs
          persistentVolumeClaim:
            claimName: flask-api-log-pvc






---
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30000
  type: NodePort
